# bigwheels

./: .bazelrc  .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  README.md  WORKSPACE
assets/: BUILD.bazel  CMakeLists.txt
assets/basic/shaders/: CMakeLists.txt  ComputeFill.hlsl  CubeMap.hlsl  Depth.hlsl  DiffuseShadow.hlsl  FullScreenTriangle.hlsl  ImageFilter.hlsl  NormalMap.hlsl  RayTrace.hlsl  SkyBox.hlsl  StaticTexture.hlsl  StaticVertexColors.hlsl  TextDraw.hlsl  Texture.hlsl  TextureMip.hlsl  VertexColors.hlsl
assets/basic/textures/: box_panel.cprj  box_panel_bc1.dds  box_panel_bc2.dds  box_panel_bc3.dds  box_panel_bc4.dds  box_panel_bc5.dds  box_panel_bc6h.dds  box_panel_bc6h_sf.dds  box_panel_bc7.dds
assets/benchmarks/shaders/: CMakeLists.txt  ComputeBufferIncrement.hlsl  ComputeFilter3.hlsl  ComputeFilter5.hlsl  ComputeFilter7.hlsl  MultipleRT.hlsl  PassThroughPos.hlsl  TextureLoad.hlsl  TextureLoad4Textures.hlsl  TextureSample.hlsl  TextureSample4Textures.hlsl  TextureSample_ExplicitEarlyZ.hlsl
assets/fishtornado/shaders/: CMakeLists.txt  Config.hlsli  DebugDraw.hlsl  FlockingPosition.hlsl  FlockingRender.hlsl  FlockingShadow.hlsl  FlockingVelocity.hlsl  Lighting.hlsli  OceanBeam.hlsl  OceanFloor.hlsl  OceanSurface.hlsl  Shark.hlsl  SharkShadow.hlsl
assets/fluid_simulation/shaders/: CMakeLists.txt  advection.hlsl  base.hlsl  bloom_blur.hlsl  bloom_final.hlsl  bloom_prefilter.hlsl  blur.hlsl  blur_vert.hlsl  checkerboard.hlsl  clear.hlsl  color.hlsl  config.hlsli  copy.hlsl  curl.hlsl  display.hlsl  divergence.hlsl  gradient_subtract.hlsl  pressure.hlsl  splat.hlsl  sunrays.hlsl  sunrays_mask.hlsl  vorticity.hlsl
assets/gbuffer/shaders/: CMakeLists.txt  Config.hlsli  DeferredLight.hlsl  DeferredRender.hlsl  DrawGBufferAttribute.hlsl  GBuffer.hlsli  VertexShader.hlsl
assets/materials/shaders/: BlinnPhong.hlsl  CMakeLists.txt  Config.hlsli  Gouraud.hlsl  PBR.hlsl  Phong.hlsl  VertexShader.hlsl
assets/shaders/: ComputeFill.hlsl  VertexColors.hlsl
benchmarks/: CMakeLists.txt
benchmarks/compute_operations/: BUILD.bazel  CMakeLists.txt  main.cpp
benchmarks/draw_call/: BUILD.bazel  CMakeLists.txt  main.cpp
benchmarks/headless_compute/: BUILD.bazel  CMakeLists.txt  main.cpp
benchmarks/overdraw/: BUILD.bazel  CMakeLists.txt  main.cpp
benchmarks/primitive_assembly/: BUILD.bazel  CMakeLists.txt  main.cpp
benchmarks/render_target/: BUILD.bazel  CMakeLists.txt  main.cpp
benchmarks/texture_load/: BUILD.bazel  CMakeLists.txt  main.cpp
benchmarks/texture_sample/: BUILD.bazel  CMakeLists.txt  main.cpp
benchmarks/texture_transfer_cpu_to_gpu/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/: CMakeLists.txt
projects/00_ppx_info/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/01_triangle/: BUILD.bazel  CMakeLists.txt  d3dcompile_helper.cpp  main.cpp
projects/02_triangle_spinning/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/03_square_textured/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/04_cube/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/05_cube_textured/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/06_compute_fill/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/07_draw_indexed/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/08_basic_geometry/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/09_obj_geometry/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/10_cube_map/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/11_compressed_texture/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/12_camera/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/12_shadows/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/13_normal_map/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/14_input/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/15_basic_material/: BUILD.bazel  CMakeLists.txt  README.md  d3dcompile_helper.h  main.cpp
projects/16_gbuffer/: BUILD.bazel  CMakeLists.txt  Entity.cpp  Entity.h  Material.cpp  Material.h  README.md  Render.h  main.cpp
projects/17_primitives/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/18_arcball_camera/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/19_camera_fit_scene/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/20_camera_motion/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/21_text_draw/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/22_basic_material_with_d3dcompile/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/22_image_filter/: BUILD.bazel  CMakeLists.txt  README.md  main.cpp
projects/23_async_compute/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/27_mipmap_demo/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/alloc/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/camera/: CMakeLists.txt  main.cpp
projects/fishtornado/: BUILD.bazel  Buffer.cpp  Buffer.h  CMakeLists.txt  Config.h  FishTornado.cpp  FishTornado.h  Flocking.cpp  Flocking.h  Material.h  Ocean.cpp  Ocean.h  ShaderConfig.h  Shark.cpp  Shark.h  main.cpp
projects/fluid_simulation/: BUILD.bazel  CMakeLists.txt  main.cpp
projects/gbuffer/: CMakeLists.txt  Entity.cpp  Entity.h  Material.cpp  Material.h  Render.h  main.cpp
projects/input/: CMakeLists.txt  main.cpp
projects/normal_map/: CMakeLists.txt  main.cpp
projects/ppx_cube/: CMakeLists.txt  main.cpp
projects/ppx_info/: CMakeLists.txt  main.cpp
projects/ppx_triangle/: CMakeLists.txt  main.cpp
projects/ppx_triangle_spinning/: CMakeLists.txt  main.cpp
projects/shadertoy/: BUILD.bazel  CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/ppx/: application.cpp  base_application.cpp  bitmap.cpp  bounding_volume.cpp  camera.cpp  command_line_parser.cpp  csv_file_log.cpp  font.cpp  geometry.cpp  graphics_util.cpp  imgui_impl.cpp  log.cpp  mesh.cpp  mipmap.cpp  platform.cpp  ppm_export.cpp  profiler.cpp  shader_translator.cpp  string_util.cpp  timer.cpp  transform.cpp  tri_mesh.cpp  wire_mesh.cpp
src/test/: CMakeLists.txt  command_line_parser_test.cpp  format_test.cpp  ppm_export_test.cpp  shader_translator_test.cpp  string_util_test.cpp  transform_test.cpp
(+374 files in other folders)
