load("//tools:yeti.bzl", "yeti_cc_library", "yeti_cc_test")
load("//build_defs:config.bzl", "COPTS")

package(default_visibility = ["//visibility:public"])

yeti_cc_library(
    name = "imgui_backends",
    srcs = [
        "@imgui//:backends/imgui_impl_glfw.cpp",
        "@imgui//:backends/imgui_impl_vulkan.cpp",
    ],
    hdrs = [
        "@imgui//:backends/imgui_impl_glfw.h",
        "@imgui//:backends/imgui_impl_vulkan.h",
    ],
    deps = [
        "@YetiSDK",
        "@glfw",
        "@imgui",
    ],
)

DEFINES = [
    "GGP",
    "PPX_GGP",
    "PPX_VULKAN",
    "UNIX",
    "USE_VK",
]

yeti_cc_library(
    name = "ppx",
    srcs = glob(
        [
            "src/ppx/**/*.h",
            "src/ppx/**/*.cpp",
        ],
        exclude = [
            "src/ppx/grfx/dx*/**",
        ],
    ),
    hdrs = glob(
        [
            "include/ppx/**/*.h",
        ],
        exclude = ["include/ppx/grfx/dx*/**"],
    ),
    copts = COPTS,
    defines = DEFINES,
    includes = [
        "include",
        "src",
    ],
    deps = [
        ":imgui_backends",
        "@VulkanMemoryAllocator",
        "@YetiSDK",
        "@cpu_features",
        "@glfw",
        "@gli",
        "@glm",
        "@pcg32",
        "@stb",
        "@tinyobjloader",
        "@utfcpp",
        "@xxHash",
    ],
)

yeti_cc_test(
    name = "ppx_tests",
    srcs = glob(
        [
            "src/test/*.cpp",
        ],
    ),
    copts = COPTS,
    defines = DEFINES,
    deps = [
        ":ppx",
        "@googletest//:gtest_main",
    ],
)
