project(benchmarks)

add_subdirectory(draw_call)
add_subdirectory(compute_operations)
add_subdirectory(headless_compute)
add_subdirectory(primitive_assembly)
add_subdirectory(render_target)
add_subdirectory(texture_load)
add_subdirectory(texture_sample)
add_subdirectory(texture_transfer_cpu_to_gpu)
add_subdirectory(overdraw)
